Updated scrollbar style + hiding ingredients section + height fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    ::-webkit-scrollbar {
+      width: 14px;
+      height: 8px;
+    }
+  
+    ::-webkit-scrollbar-thumb {
+      background-color: #c3eeab;
+      border-radius: 10px;
+      margin: 2px;
+    }
+
+  }
